fix gap on mobile

--- a/app/assets/stylesheets/videos/index/videos.scss
+++ b/app/assets/stylesheets/videos/index/videos.scss
@@ -134,6 +134,7 @@
     display: flex;
     flex-direction: column;
     padding: 0;
+    gap: 0px;
   }
   .video-bottom-section {
     margin: 10px;
